# DeepRL

./: .gitignore  .jupyter_ystore.db  DeepRL.ipynb  Final_report.ipynb  PPO_discrete_rnn_main.py  poetry.sh  ppo_discrete_rnn.py  pyproject.toml  test.py  utils.py
.ipynb_checkpoints/: DeepRL-checkpoint.ipynb
deeprl/: launch.py
env/: __init__.py  env.py
runs/PPO_discrete/env_VisualGrounding-v0_number_3/: events.out.tfevents.1690890108.hydran00.134589.0  events.out.tfevents.1690890245.hydran00.134722.0  events.out.tfevents.1690890297.hydran00.134789.0  events.out.tfevents.1690890321.hydran00.134853.0  events.out.tfevents.1690890372.hydran00.134927.0  events.out.tfevents.1690890394.hydran00.135012.0  events.out.tfevents.1690890435.hydran00.135105.0  events.out.tfevents.1690890454.hydran00.135170.0  events.out.tfevents.1690890502.hydran00.135239.0  events.out.tfevents.1690890545.hydran00.135403.0  events.out.tfevents.1690890690.hydran00.135522.0  events.out.tfevents.1690890745.hydran00.135595.0  events.out.tfevents.1690890800.hydran00.135667.0  events.out.tfevents.1690890834.hydran00.135732.0  events.out.tfevents.1690890915.hydran00.135814.0  events.out.tfevents.1690890946.hydran00.135895.0  events.out.tfevents.1690891030.hydran00.136049.0  events.out.tfevents.1690891109.hydran00.136206.0  events.out.tfevents.1690891204.hydran00.136321.0  events.out.tfevents.1690891832.hydran00.137859.0
runs/PPO_discrete/env_VisualGrounding-v0_number_4/: events.out.tfevents.1690893781.hydran00.142609.0  events.out.tfevents.1690893835.hydran00.142684.0  (+32 more)
(+9 files in other folders)
