[tool.poetry]
name = "deeprl"
version = "0.1.0"
description = ""
authors = ["Mattia2700 <mattia2700franzin+dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ftfy = "^6.1.1"
regex = "^2023.6.3"
tqdm = "^4.65.0"
clip = {git = "https://github.com/openai/CLIP.git"}
ipykernel = "^6.24.0"
numpy = "^1.25.0"
pandas = "^2.0.3"
gdown = "^4.7.1"
gym = {version = ">=0.17.0,<0.18.0", extras = ["box2d"]}
pyvirtualdisplay = ">=0.2.0,<0.3.0"
pyopengl = ">=3.1.0,<3.2.0"
pyopengl-accelerate = ">=3.1.0,<3.2.0"
pillow = "^10.0.0"
jupyterlab = "^4.0.2"
jupyter-collaboration = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notebook = "deeprl.launch:main"